[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "coding-assistant"
version = "0.1.0"
description = "A minimal single-file coding assistant powered by Ollama"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
coding-assistant = "coding_assistant:main"
